--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <span>WebSockets</span>
                 </div>
                 <div class="project-links">
-                    <a href="https://chatbot.iambd.site" target="_blank" class="btn-small">Live Demo</a>
+                    <a href="https://chatbot.imabd.site" target="_blank" class="btn-small">Live Demo</a>
                 </div>
             </div>
         </div>
