--- a/index.html
+++ b/index.html
@@ -6,6 +6,76 @@
     <title>Abdullah Masood| Futuristic Web Developer</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        <style>
+/* Contact Section Styling */
+.contact {
+    background: #0e0e0e;
+    padding: 60px 20px;
+    color: white;
+    text-align: center;
+}
+
+.contact form {
+    max-width: 600px;
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 30px;
+    background: rgba(255, 255, 255, 0.05);
+    border-radius: 12px;
+    box-shadow: 0 0 10px rgba(0, 255, 255, 0.2);
+}
+
+.contact input,
+.contact textarea {
+    padding: 12px 15px;
+    border: none;
+    border-radius: 8px;
+    background: #1a1a1a;
+    color: white;
+    font-size: 16px;
+    resize: none;
+}
+
+.contact input::placeholder,
+.contact textarea::placeholder {
+    color: #aaa;
+}
+
+.contact button {
+    padding: 12px;
+    background: #00ffff;
+    border: none;
+    color: black;
+    font-weight: bold;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.contact button:hover {
+    background: #00cccc;
+}
+
+.social-links {
+    margin-top: 30px;
+}
+
+.social-links a {
+    margin: 0 10px;
+    color: #00ffff;
+    font-size: 24px;
+    transition: color 0.3s ease;
+}
+
+.social-links a:hover {
+    color: white;
+}
+</style>
+
+    </style>
 </head>
 <body>
     <div class="container">
